XMLtoCSV/objects/unpackaged/objects/PCYC_Business_Development_Deals__c.object
<CustomObject>
    <description>Custom Object for Business Development to track deals.</description>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Business_Development_Deals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Deal_Stage__c</fullName>
        <label>Deal Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1.  BD Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.  Top-line Triage Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.  Target ---&gt; Functional team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.  Planning - Target --&gt; Functional Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.  Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.  Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Deal_Type__c</fullName>
        <description>Deal Type for Business Development Deals.</description>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out-License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Description__c</fullName>
        <description>Description field on Business Development Deal object.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Molecule__c</fullName>
        <label>Molecule</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Status__c</fullName>
        <description>Status for Business Development Deals.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Development Deal</label>
    <nameField>
        <label>BD Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Development Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>